--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "author": "Your name here",
   "devDependencies": {
     "babel-core": "^6.0.0",
+    "babel-eslint": "^4.1.6",
     "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
@@ -48,6 +49,7 @@
     "karma-webpack": "^1.7.0",
     "minimist": "^1.2.0",
     "mocha": "^2.2.5",
+    "node-sass": "^3.3.3",
     "null-loader": "^0.1.1",
     "open": "0.0.5",
     "phantomjs": "^1.9.18",
@@ -56,8 +58,7 @@
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.0",
-    "webpack-dev-server": "^1.12.0",
-    "node-sass": "^3.3.3"
+    "webpack-dev-server": "^1.12.0"
   },
   "dependencies": {
     "alt": "^0.17.9",
